--- a/운영_이준혁.md
+++ b/운영_이준혁.md
@@ -89,6 +89,8 @@ aws ecr create-repository --repository-name productdelivery --image-scanning-con
 
 aws ecr create-repository --repository-name orderstatus --image-scanning-configuration scanOnPush=true --region ap-southeast-1
 
+aws ecr create-repository --repository-name message --image-scanning-configuration scanOnPush=true --region ap-northeast-2
+
 
 --서버에서 git으로 부터 다운로드
 
