--- a/운영_이준혁.md
+++ b/운영_이준혁.md
@@ -157,12 +157,12 @@ docker push 879772956301.dkr.ecr.ap-southeast-1.amazonaws.com/orderstatus:latest
 
 kubectl apply -f kubernetes/deployment.yml
 
-kubectl apply -f kubernetes/service.yml
+kubectl apply -f kubernetes/service.yml --안해도 됨. deployment.yml에 몰려있음. 각 서비스별 하위에도 각각 있음
 
 
 --helm 으로 설치하기
 
-curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
 
 chmod 700 get_helm.sh
 
