--- a/운영_이준혁.md
+++ b/운영_이준혁.md
@@ -56,13 +56,13 @@ Default output format [json]: json
 - AWS 클러스터 생성
 eksctl create cluster --name (Cluster-Name) --version 1.19 --nodegroup-name standard-workers --node-type t3.medium --nodes 4 --nodes-min 1 --nodes-max 4
 
-eksctl create cluster --name team03-eks --version 1.19 --nodegroup-name standard-workers --node-type t3.medium --nodes 4 --nodes-min 1 --nodes-max 4
+eksctl create cluster --name user14-eks --version 1.19 --nodegroup-name standard-workers --node-type t3.medium --nodes 4 --nodes-min 1 --nodes-max 4
 
 
 - AWS 클러스터 토큰 가져오기
 aws eks --region (Region-Code) update-kubeconfig --name (Cluster-Name)
 
-aws eks --region ap-southeast-1 update-kubeconfig --name team03-eks
+aws eks --region ap-southeast-1 update-kubeconfig --name user14-eks
 
 kubectl get all
 kubectl config current-context
@@ -89,12 +89,12 @@ aws ecr create-repository --repository-name productdelivery --image-scanning-con
 
 aws ecr create-repository --repository-name orderstatus --image-scanning-configuration scanOnPush=true --region ap-southeast-1
 
-aws ecr create-repository --repository-name message --image-scanning-configuration scanOnPush=true --region ap-northeast-2
+aws ecr create-repository --repository-name message --image-scanning-configuration scanOnPush=true --region ap-southeast-1
 
 
 --서버에서 git으로 부터 다운로드
 
-git clone https://github.com/yanga1118/food_delivery_work.git
+git clone https://github.com/enyasio99/food_delivery_private.git
 
 *사전 퐉인사항
 DockerFile 내 jdk 버전11인지 확인
